<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.fragments.DeliveryFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ubuntu_bold"
            android:src="@drawable/right_menu"
            android:text="@string/Deliveries"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/right_menu" />

        <ImageView
            android:id="@+id/ivCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:src="@drawable/uil_calender" />

    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/llDeliveries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cbSelectAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Select_All"
                    android:fontFamily="@font/ubuntu_regular"
                    app:layout_constraintStart_toEndOf="@id/cbSelectAll"
                    app:layout_constraintTop_toTopOf="@id/cbSelectAll"
                    app:layout_constraintBottom_toBottomOf="@id/cbSelectAll"/>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/tvTotalDeliveryCount"
                    android:text="@string/Total_Deliveries"
                    app:layout_constraintTop_toTopOf="@id/cbSelectAll"
                    app:layout_constraintBottom_toBottomOf="@id/cbSelectAll"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/tvTotalDeliveryCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="74"
                    app:layout_constraintTop_toTopOf="@id/cbSelectAll"
                    app:layout_constraintBottom_toBottomOf="@id/cbSelectAll"
                    android:layout_marginEnd="20dp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="15dp"
                android:textSize="14sp"
                android:drawableEnd="@drawable/search"
                android:hint="@string/SearchCustomerName"
                android:fontFamily="@font/ubuntu_regular"
                android:background="@drawable/grey_squared_bg" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDeliveries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:nestedScrollingEnabled="false"
                android:layout_marginBottom="20dp"
                tools:listitem="@layout/deliveries_item_view"/>


        </LinearLayout>






    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>