<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ubuntu_regular"
                android:src="@drawable/right_menu"
                android:text="@string/Add_Pickup_Location"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/grey_squared_bg"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/Full_Name"
                android:padding="15dp"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/grey_squared_bg"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/Full_Name"
                android:padding="15dp"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/grey_squared_bg"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/Full_Name"
                android:padding="15dp"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spPickupLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textSize="14sp"
                android:hint="@string/Phone"
                android:background="@drawable/grey_squared_bg"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/grey_squared_bg"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/Full_Name"
                android:padding="15dp"
                android:textSize="14sp"
                android:layout_marginBottom="20dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btAddPickupLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Add_Pickup_Location"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/blue_squared_rounded_bg"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
